style: Fix sidebar flickering

--- a/client/src/Components/Sidebar/Sidebar.css
+++ b/client/src/Components/Sidebar/Sidebar.css
@@ -95,7 +95,6 @@
 .category-li.active {
   border-radius: 5px;
   background-color: var(--primary-transparent);
-  font-weight: 400;
 }
 
 .sidebar-icon-container {
