--- a/client/src/Components/TableOfContents/TableOfContents.css
+++ b/client/src/Components/TableOfContents/TableOfContents.css
@@ -3,12 +3,11 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  width: 30%;
+  width: 15vw;
 }
 
 .table-of-contents-link {
   text-decoration: none;
-  /* white-space: nowrap; */
   color: var(--primary);
   padding: 0.2rem;
   border-radius: 5px;
@@ -23,7 +22,6 @@
 }
 .highlighted {
   background-color: var(--primary-transparent);
-  font-weight: 500;
 }
 
 @media screen and (max-width: 600px) {
